--- a/planes.html
+++ b/planes.html
@@ -20,8 +20,8 @@ body::before{
   position:fixed;
   inset:0;
   background:
-    radial-gradient(circle at 20% 20%,rgba(0,200,255,.14),transparent 40%),
-    radial-gradient(circle at 80% 70%,rgba(120,90,255,.16),transparent 45%),
+    radial-gradient(circle at 20% 20%,rgba(0,200,255,.16),transparent 40%),
+    radial-gradient(circle at 80% 70%,rgba(120,90,255,.18),transparent 45%),
     #05070c;
   z-index:-2;
 }
@@ -48,7 +48,7 @@ header{
 }
 .nav{
   display:flex;
-  gap:26px;
+  gap:28px;
 }
 .nav a{
   color:#fff;
@@ -67,7 +67,8 @@ header{
 .lang button{
   padding:3px 8px;
   font-size:10px;
-  border-radius:12px;
+  letter-spacing:.12em;
+  border-radius:14px;
   border:1px solid rgba(255,255,255,.25);
   background:transparent;
   color:#fff;
@@ -77,7 +78,6 @@ header{
 .lang .active{
   background:#00cfff;
   color:#000;
-  border-color:#00cfff;
 }
 
 /* MAIN */
@@ -91,46 +91,46 @@ main{
 
 /* TITLE */
 h1{
-  font-size:clamp(44px,6vw,78px);
+  font-size:clamp(48px,6vw,86px);
   font-weight:900;
   letter-spacing:-0.05em;
-  margin-bottom:18px;
+  margin-bottom:22px;
 }
 .subtitle{
-  font-size:19px;
-  line-height:1.6;
+  font-size:20px;
+  line-height:1.65;
   opacity:.9;
-  max-width:820px;
+  max-width:880px;
   margin:0 auto 90px;
   font-weight:500;
 }
 
-/* PLANS */
+/* PLANS GRID */
 .plans{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
-  gap:44px;
+  grid-template-columns:repeat(auto-fit,minmax(320px,1fr));
+  gap:48px;
 }
 
 /* CARD */
 .plan{
   position:relative;
   background:rgba(255,255,255,.06);
-  border-radius:28px;
-  padding:42px 34px 46px;
+  border-radius:32px;
+  padding:44px 36px 48px;
   backdrop-filter:blur(18px);
   box-shadow:0 40px 120px rgba(0,0,0,.85);
-  transition:.45s;
+  animation:float 7s ease-in-out infinite;
 }
-.plan:hover{
-  transform:translateY(-14px);
-  box-shadow:0 70px 160px rgba(0,0,0,.95);
+@keyframes float{
+  0%,100%{transform:translateY(0)}
+  50%{transform:translateY(-10px)}
 }
 
 /* FEATURED */
 .plan.featured{
   outline:2px solid #00cfff;
-  background:linear-gradient(180deg,rgba(0,200,255,.14),rgba(255,255,255,.06));
+  background:linear-gradient(180deg,rgba(0,200,255,.16),rgba(255,255,255,.06));
 }
 .badge{
   position:absolute;
@@ -141,26 +141,31 @@ h1{
   color:#000;
   font-size:11px;
   font-weight:900;
-  padding:6px 16px;
+  padding:6px 18px;
   border-radius:20px;
-  letter-spacing:.08em;
+  letter-spacing:.1em;
 }
 
 /* TEXT */
 .plan h2{
-  font-size:28px;
-  margin-bottom:10px;
+  font-size:30px;
+  margin-bottom:14px;
 }
-.plan p{
-  font-size:15.5px;
-  line-height:1.6;
-  opacity:.88;
+.plan .who{
+  font-size:15px;
+  opacity:.75;
   margin-bottom:22px;
 }
+.plan .desc{
+  font-size:16px;
+  line-height:1.6;
+  opacity:.9;
+  margin-bottom:26px;
+}
 .price{
-  font-size:46px;
+  font-size:48px;
   font-weight:900;
-  margin:18px 0 14px;
+  margin:22px 0 10px;
 }
 .price span{
   font-size:16px;
@@ -171,12 +176,11 @@ h1{
 ul{
   list-style:none;
   text-align:left;
-  margin:26px 0 36px;
+  margin:30px 0 40px;
 }
 ul li{
-  margin-bottom:14px;
-  font-size:15.8px;
-  opacity:.95;
+  margin-bottom:16px;
+  font-size:16px;
 }
 ul li::before{
   content:"✔";
@@ -187,20 +191,21 @@ ul li::before{
 /* CTA */
 .plan a{
   display:inline-block;
-  padding:14px 30px;
-  border-radius:26px;
+  padding:15px 34px;
+  border-radius:28px;
   background:#00cfff;
   color:#000;
-  font-weight:800;
+  font-weight:900;
   text-decoration:none;
+  letter-spacing:.04em;
 }
 
 /* FOOTER */
 footer{
-  margin-top:130px;
+  margin-top:140px;
   font-size:12px;
   opacity:.55;
-  letter-spacing:.06em;
+  letter-spacing:.08em;
 }
 </style>
 </head>
@@ -221,68 +226,104 @@ footer{
 </header>
 
 <main>
-  <h1 data-es="Planes ZenSite" data-en="ZenSite Plans">Planes ZenSite</h1>
 
-  <p class="subtitle"
-     data-es="Aquí eliges cuánto quieres crecer. Cada plan está diseñado para llevar tu negocio a un nivel más alto de presencia, confianza y ventas reales."
-     data-en="Choose how far you want to grow. Each plan is designed to elevate your business with stronger presence, trust, and real sales.">
-     Aquí eliges cuánto quieres crecer. Cada plan está diseñado para llevar tu negocio a un nivel más alto de presencia, confianza y ventas reales.
-  </p>
+<h1 data-es="Planes ZenSite" data-en="ZenSite Plans">Planes ZenSite</h1>
 
-  <section class="plans">
+<p class="subtitle"
+data-es="No todos los negocios necesitan lo mismo. Aquí eliges el nivel de sistema digital que define cómo te ven, cuánto confían en ti y hasta dónde puedes crecer."
+data-en="Not all businesses need the same thing. Here you choose the digital system level that defines how you’re perceived, how much trust you build, and how far you can grow.">
+No todos los negocios necesitan lo mismo. Aquí eliges el nivel de sistema digital que define cómo te ven, cuánto confían en ti y hasta dónde puedes crecer.
+</p>
 
-    <!-- Z -->
-    <div class="plan">
-      <h2>Z</h2>
-      <p data-es="Para negocios que necesitan verse profesionales y empezar a convertir desde el primer día."
-         data-en="For businesses that need to look professional and start converting from day one.">
-      </p>
-      <div class="price">$200 <span>USD</span></div>
-      <ul>
-        <li data-es="Landing page estratégica" data-en="Strategic landing page"></li>
-        <li data-es="Diseño responsive completo" data-en="Fully responsive design"></li>
-        <li data-es="Carga rápida y estructura limpia" data-en="Fast load & clean structure"></li>
-        <li data-es="Imagen seria y confiable" data-en="Serious, trustworthy image"></li>
-      </ul>
-      <a href="https://wa.me/15027942412?text=Hola,%20quiero%20el%20Plan%20Z%20de%20$200">Contactar</a>
-    </div>
+<section class="plans">
 
-    <!-- Z+ -->
-    <div class="plan featured">
-      <div class="badge">MÁS VENDIDO</div>
-      <h2>Z+</h2>
-      <p data-es="El plan ideal para negocios que quieren verse grandes, sólidos y vender con intención."
-         data-en="The ideal plan for businesses that want to look established and sell with intent.">
-      </p>
-      <div class="price">$480 <span>USD</span></div>
-      <ul>
-        <li data-es="Web multipágina completa" data-en="Complete multi-page website"></li>
-        <li data-es="Diseño premium personalizado" data-en="Custom premium design"></li>
-        <li data-es="Estructura pensada para ventas" data-en="Sales-oriented structure"></li>
-        <li data-es="Mayor autoridad de marca" data-en="Stronger brand authority"></li>
-      </ul>
-      <a href="https://wa.me/15027942412?text=Hola,%20quiero%20el%20Plan%20Z+%20de%20$480">Contactar</a>
-    </div>
+<!-- Z -->
+<div class="plan">
+<h2>Plan Z</h2>
+<div class="who"
+data-es="Para negocios pequeños, servicios locales y emprendedores que empiezan"
+data-en="For small businesses, local services and new entrepreneurs">
+Para negocios pequeños, servicios locales y emprendedores que empiezan
+</div>
 
-    <!-- Z PREMIUM -->
-    <div class="plan">
-      <h2>Z Premium</h2>
-      <p data-es="Para marcas que quieren vender productos, manejar inventario y escalar como negocio digital real."
-         data-en="For brands ready to sell products, manage inventory, and scale as a real digital business.">
-      </p>
-      <div class="price">$720 <span>USD</span></div>
-      <ul>
-        <li data-es="Tienda online completa" data-en="Full e-commerce store"></li>
-        <li data-es="Carrito e inventario" data-en="Cart & inventory system"></li>
-        <li data-es="Base lista para escalar ventas" data-en="Scalable sales foundation"></li>
-        <li data-es="Marca digital de alto nivel" data-en="High-end digital brand"></li>
-      </ul>
-      <a href="https://wa.me/15027942412?text=Hola,%20quiero%20el%20Plan%20Z%20Premium%20de%20$720">Contactar</a>
-    </div>
+<p class="desc"
+data-es="Este plan es una *Long Page estratégica* diseñada para explicar quién eres, qué haces y por qué deben contactarte. Perfecto para dejar de verte amateur y empezar a convertir visitas en clientes reales."
+data-en="This plan is a *strategic long page* designed to explain who you are, what you do and why clients should contact you. Perfect to stop looking amateur and start converting visits into real clients.">
+</p>
 
-  </section>
+<div class="price">$200 <span>USD</span></div>
 
-  <footer>© 2025 ZenSite · Todos los derechos reservados</footer>
+<ul>
+<li data-es="Long Page completa enfocada en conversión" data-en="Full conversion-focused long page"></li>
+<li data-es="Secciones claras: servicios, valor, contacto" data-en="Clear sections: services, value, contact"></li>
+<li data-es="Diseño profesional responsive" data-en="Professional responsive design"></li>
+<li data-es="Ideal para WhatsApp y contacto directo" data-en="Ideal for WhatsApp & direct contact"></li>
+<li data-es="Imagen digital seria y confiable" data-en="Serious and trustworthy digital image"></li>
+</ul>
+
+<a href="https://wa.me/15027942412?text=Hola,%20quiero%20el%20Plan%20Z%20($200)">Contactar</a>
+</div>
+
+<!-- Z+ -->
+<div class="plan featured">
+<div class="badge">MÁS VENDIDO</div>
+<h2>Plan Z+</h2>
+
+<div class="who"
+data-es="Para negocios que quieren verse grandes y crecer"
+data-en="For businesses that want to look established and grow">
+Para negocios que quieren verse grandes y crecer
+</div>
+
+<p class="desc"
+data-es="Aquí pasas de una simple página a una *web estructurada*. Ideal si ofreces varios servicios, quieres autoridad y que tu web trabaje por ti 24/7 cerrando clientes."
+data-en="Here you move from a simple page to a *structured website*. Ideal if you offer multiple services, want authority and need your site working 24/7 closing clients.">
+</p>
+
+<div class="price">$480 <span>USD</span></div>
+
+<ul>
+<li data-es="Web multipágina profesional" data-en="Professional multi-page website"></li>
+<li data-es="Estructura pensada para vender" data-en="Sales-driven structure"></li>
+<li data-es="Copy persuasivo que genera confianza" data-en="Persuasive copy that builds trust"></li>
+<li data-es="Diseño premium personalizado" data-en="Custom premium design"></li>
+<li data-es="Marca con presencia sólida" data-en="Strong brand presence"></li>
+</ul>
+
+<a href="https://wa.me/15027942412?text=Hola,%20quiero%20el%20Plan%20Z+%20($480)">Contactar</a>
+</div>
+
+<!-- Z PREMIUM -->
+<div class="plan">
+<h2>Z Premium</h2>
+
+<div class="who"
+data-es="Para vender productos y escalar como negocio digital"
+data-en="For selling products and scaling digitally">
+Para vender productos y escalar como negocio digital
+</div>
+
+<p class="desc"
+data-es="Esto no es una web, es un *sistema de ventas*. Diseñado para negocios que quieren vender online, manejar inventario y construir una marca digital de alto nivel."
+data-en="This is not just a website, it’s a *sales system*. Built for businesses that want to sell online, manage inventory and build a high-end digital brand.">
+</p>
+
+<div class="price">$720 <span>USD</span></div>
+
+<ul>
+<li data-es="Tienda online completa" data-en="Full e-commerce store"></li>
+<li data-es="Productos, inventario y categorías" data-en="Products, inventory & categories"></li>
+<li data-es="Carrito de compras funcional" data-en="Functional shopping cart"></li>
+<li data-es="Base preparada para escalar ventas" data-en="Scalable sales foundation"></li>
+<li data-es="Marca digital premium" data-en="Premium digital brand"></li>
+</ul>
+
+<a href="https://wa.me/15027942412?text=Hola,%20quiero%20el%20Plan%20Z%20Premium%20($720)">Contactar</a>
+</div>
+
+</section>
+
+<footer>© 2025 ZenSite · Todos los derechos reservados</footer>
 </main>
 
 <script>
@@ -294,8 +335,8 @@ function setLang(lang){
     el.textContent = el.dataset[lang];
   });
 }
-esBtn.onclick=()=>{esBtn.classList.add("active");enBtn.classList.remove("active");setLang("es");};
-enBtn.onclick=()=>{enBtn.classList.add("active");esBtn.classList.remove("active");setLang("en");};
+esBtn.onclick=()=>{esBtn.classList.add("active");enBtn.classList.remove("active");setLang("es");}
+enBtn.onclick=()=>{enBtn.classList.add("active");esBtn.classList.remove("active");setLang("en");}
 </script>
 
 </body>
