--- a/planes.html
+++ b/planes.html
@@ -7,11 +7,11 @@
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
+
 body{
   font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","SF Pro Text","Segoe UI",sans-serif;
   background:#05070c;
   color:#fff;
-  overflow-x:hidden;
 }
 
 /* BACKGROUND */
@@ -20,7 +20,7 @@ body::before{
   position:fixed;
   inset:0;
   background:
-    radial-gradient(circle at 20% 20%,rgba(0,200,255,.16),transparent 40%),
+    radial-gradient(circle at 20% 20%,rgba(0,200,255,.15),transparent 40%),
     radial-gradient(circle at 80% 70%,rgba(120,90,255,.18),transparent 45%),
     #05070c;
   z-index:-2;
@@ -37,6 +37,7 @@ body::after{
 header{
   position:fixed;
   top:0;
+  left:0;
   width:100%;
   z-index:1000;
   display:flex;
@@ -46,6 +47,7 @@ header{
   backdrop-filter:blur(16px);
   border-bottom:1px solid rgba(255,255,255,.08);
 }
+
 .nav{
   display:flex;
   gap:28px;
@@ -65,7 +67,7 @@ header{
   gap:6px;
 }
 .lang button{
-  padding:3px 8px;
+  padding:4px 9px;
   font-size:10px;
   letter-spacing:.12em;
   border-radius:14px;
@@ -85,101 +87,92 @@ main{
   margin-top:160px;
   padding:40px 20px 120px;
   max-width:1200px;
-  margin:auto;
+  margin-left:auto;
+  margin-right:auto;
   text-align:center;
 }
 
 /* TITLE */
 h1{
-  font-size:clamp(48px,6vw,86px);
+  font-size:clamp(46px,6vw,80px);
   font-weight:900;
   letter-spacing:-0.05em;
-  margin-bottom:22px;
+  margin-bottom:18px;
 }
 .subtitle{
   font-size:20px;
-  line-height:1.65;
+  line-height:1.6;
   opacity:.9;
-  max-width:880px;
+  max-width:820px;
   margin:0 auto 90px;
-  font-weight:500;
 }
 
-/* PLANS GRID */
+/* PLANS */
 .plans{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(320px,1fr));
-  gap:48px;
+  grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
+  gap:44px;
 }
 
 /* CARD */
 .plan{
-  position:relative;
   background:rgba(255,255,255,.06);
-  border-radius:32px;
-  padding:44px 36px 48px;
+  border-radius:30px;
+  padding:42px 34px 46px;
   backdrop-filter:blur(18px);
   box-shadow:0 40px 120px rgba(0,0,0,.85);
-  animation:float 7s ease-in-out infinite;
+  transition:.4s;
 }
-@keyframes float{
-  0%,100%{transform:translateY(0)}
-  50%{transform:translateY(-10px)}
+.plan:hover{
+  transform:translateY(-12px);
+  box-shadow:0 70px 160px rgba(0,0,0,.95);
 }
 
-/* FEATURED */
 .plan.featured{
   outline:2px solid #00cfff;
-  background:linear-gradient(180deg,rgba(0,200,255,.16),rgba(255,255,255,.06));
+  background:linear-gradient(180deg,rgba(0,200,255,.14),rgba(255,255,255,.06));
 }
+
 .badge{
-  position:absolute;
-  top:-14px;
-  left:50%;
-  transform:translateX(-50%);
+  display:inline-block;
+  margin-bottom:18px;
   background:#00cfff;
   color:#000;
   font-size:11px;
   font-weight:900;
-  padding:6px 18px;
+  padding:6px 16px;
   border-radius:20px;
-  letter-spacing:.1em;
+  letter-spacing:.08em;
 }
 
-/* TEXT */
 .plan h2{
-  font-size:30px;
-  margin-bottom:14px;
+  font-size:28px;
+  margin-bottom:8px;
 }
-.plan .who{
-  font-size:15px;
-  opacity:.75;
-  margin-bottom:22px;
-}
-.plan .desc{
-  font-size:16px;
+.plan p{
+  font-size:15.5px;
   line-height:1.6;
   opacity:.9;
-  margin-bottom:26px;
+  margin-bottom:20px;
 }
+
 .price{
-  font-size:48px;
+  font-size:46px;
   font-weight:900;
-  margin:22px 0 10px;
+  margin:18px 0 10px;
 }
 .price span{
   font-size:16px;
   opacity:.6;
 }
 
-/* LIST */
 ul{
   list-style:none;
   text-align:left;
-  margin:30px 0 40px;
+  margin:28px 0 40px;
 }
 ul li{
-  margin-bottom:16px;
+  margin-bottom:14px;
   font-size:16px;
 }
 ul li::before{
@@ -188,24 +181,21 @@ ul li::before{
   margin-right:10px;
 }
 
-/* CTA */
 .plan a{
   display:inline-block;
-  padding:15px 34px;
-  border-radius:28px;
+  padding:14px 34px;
+  border-radius:26px;
   background:#00cfff;
   color:#000;
-  font-weight:900;
+  font-weight:800;
   text-decoration:none;
-  letter-spacing:.04em;
 }
 
 /* FOOTER */
 footer{
-  margin-top:140px;
+  margin-top:120px;
   font-size:12px;
   opacity:.55;
-  letter-spacing:.08em;
 }
 </style>
 </head>
@@ -230,100 +220,63 @@ footer{
 <h1 data-es="Planes ZenSite" data-en="ZenSite Plans">Planes ZenSite</h1>
 
 <p class="subtitle"
-data-es="No todos los negocios necesitan lo mismo. Aquí eliges el nivel de sistema digital que define cómo te ven, cuánto confían en ti y hasta dónde puedes crecer."
-data-en="Not all businesses need the same thing. Here you choose the digital system level that defines how you’re perceived, how much trust you build, and how far you can grow.">
-No todos los negocios necesitan lo mismo. Aquí eliges el nivel de sistema digital que define cómo te ven, cuánto confían en ti y hasta dónde puedes crecer.
+data-es="Cada plan está diseñado para un tipo de negocio distinto. Aquí no pagas por una web, pagas por presencia, confianza y ventas reales."
+data-en="Each plan is built for a different business stage. You’re not paying for a website — you’re investing in presence, trust, and real conversions.">
+Cada plan está diseñado para un tipo de negocio distinto. Aquí no pagas por una web, pagas por presencia, confianza y ventas reales.
 </p>
 
 <section class="plans">
 
-<!-- Z -->
 <div class="plan">
-<h2>Plan Z</h2>
-<div class="who"
-data-es="Para negocios pequeños, servicios locales y emprendedores que empiezan"
-data-en="For small businesses, local services and new entrepreneurs">
-Para negocios pequeños, servicios locales y emprendedores que empiezan
+  <h2>Z</h2>
+  <p data-es="Ideal para negocios que necesitan una presencia clara, profesional y directa para captar clientes."
+     data-en="Perfect for businesses that need a clear, professional, conversion-focused presence.">
+  </p>
+  <div class="price">$200 <span>USD</span></div>
+  <ul>
+    <li data-es="Landing page estratégica" data-en="Strategic landing page"></li>
+    <li data-es="Mensaje claro y enfocado" data-en="Clear, focused messaging"></li>
+    <li data-es="Optimizada para captar contactos" data-en="Optimized for lead capture"></li>
+    <li data-es="Imagen profesional inmediata" data-en="Instant professional image"></li>
+  </ul>
+  <a href="https://wa.me/15027942412?text=Hola,%20quiero%20el%20Plan%20Z">Contactar</a>
 </div>
 
-<p class="desc"
-data-es="Este plan es una *Long Page estratégica* diseñada para explicar quién eres, qué haces y por qué deben contactarte. Perfecto para dejar de verte amateur y empezar a convertir visitas en clientes reales."
-data-en="This plan is a *strategic long page* designed to explain who you are, what you do and why clients should contact you. Perfect to stop looking amateur and start converting visits into real clients.">
-</p>
-
-<div class="price">$200 <span>USD</span></div>
-
-<ul>
-<li data-es="Long Page completa enfocada en conversión" data-en="Full conversion-focused long page"></li>
-<li data-es="Secciones claras: servicios, valor, contacto" data-en="Clear sections: services, value, contact"></li>
-<li data-es="Diseño profesional responsive" data-en="Professional responsive design"></li>
-<li data-es="Ideal para WhatsApp y contacto directo" data-en="Ideal for WhatsApp & direct contact"></li>
-<li data-es="Imagen digital seria y confiable" data-en="Serious and trustworthy digital image"></li>
-</ul>
-
-<a href="https://wa.me/15027942412?text=Hola,%20quiero%20el%20Plan%20Z%20($200)">Contactar</a>
-</div>
-
-<!-- Z+ -->
 <div class="plan featured">
-<div class="badge">MÁS VENDIDO</div>
-<h2>Plan Z+</h2>
-
-<div class="who"
-data-es="Para negocios que quieren verse grandes y crecer"
-data-en="For businesses that want to look established and grow">
-Para negocios que quieren verse grandes y crecer
+  <div class="badge">MÁS VENDIDO</div>
+  <h2>Z+</h2>
+  <p data-es="Para negocios que quieren verse grandes, sólidos y generar confianza desde el primer segundo."
+     data-en="For businesses that want to look established, solid, and trustworthy from the first second.">
+  </p>
+  <div class="price">$480 <span>USD</span></div>
+  <ul>
+    <li data-es="Web multipágina completa" data-en="Full multi-page website"></li>
+    <li data-es="Diseño premium personalizado" data-en="Custom premium design"></li>
+    <li data-es="Estructura pensada para vender" data-en="Sales-oriented structure"></li>
+    <li data-es="Marca con autoridad" data-en="Authoritative brand presence"></li>
+  </ul>
+  <a href="https://wa.me/15027942412?text=Hola,%20quiero%20el%20Plan%20Z+">Contactar</a>
 </div>
 
-<p class="desc"
-data-es="Aquí pasas de una simple página a una *web estructurada*. Ideal si ofreces varios servicios, quieres autoridad y que tu web trabaje por ti 24/7 cerrando clientes."
-data-en="Here you move from a simple page to a *structured website*. Ideal if you offer multiple services, want authority and need your site working 24/7 closing clients.">
-</p>
-
-<div class="price">$480 <span>USD</span></div>
-
-<ul>
-<li data-es="Web multipágina profesional" data-en="Professional multi-page website"></li>
-<li data-es="Estructura pensada para vender" data-en="Sales-driven structure"></li>
-<li data-es="Copy persuasivo que genera confianza" data-en="Persuasive copy that builds trust"></li>
-<li data-es="Diseño premium personalizado" data-en="Custom premium design"></li>
-<li data-es="Marca con presencia sólida" data-en="Strong brand presence"></li>
-</ul>
-
-<a href="https://wa.me/15027942412?text=Hola,%20quiero%20el%20Plan%20Z+%20($480)">Contactar</a>
-</div>
-
-<!-- Z PREMIUM -->
 <div class="plan">
-<h2>Z Premium</h2>
-
-<div class="who"
-data-es="Para vender productos y escalar como negocio digital"
-data-en="For selling products and scaling digitally">
-Para vender productos y escalar como negocio digital
-</div>
-
-<p class="desc"
-data-es="Esto no es una web, es un *sistema de ventas*. Diseñado para negocios que quieren vender online, manejar inventario y construir una marca digital de alto nivel."
-data-en="This is not just a website, it’s a *sales system*. Built for businesses that want to sell online, manage inventory and build a high-end digital brand.">
-</p>
-
-<div class="price">$720 <span>USD</span></div>
-
-<ul>
-<li data-es="Tienda online completa" data-en="Full e-commerce store"></li>
-<li data-es="Productos, inventario y categorías" data-en="Products, inventory & categories"></li>
-<li data-es="Carrito de compras funcional" data-en="Functional shopping cart"></li>
-<li data-es="Base preparada para escalar ventas" data-en="Scalable sales foundation"></li>
-<li data-es="Marca digital premium" data-en="Premium digital brand"></li>
-</ul>
-
-<a href="https://wa.me/15027942412?text=Hola,%20quiero%20el%20Plan%20Z%20Premium%20($720)">Contactar</a>
+  <h2>Z Premium</h2>
+  <p data-es="Para negocios que venden productos, escalan y operan como una empresa digital real."
+     data-en="Built for businesses that sell products, scale operations, and run a real digital company.">
+  </p>
+  <div class="price">$720 <span>USD</span></div>
+  <ul>
+    <li data-es="Tienda online completa" data-en="Full e-commerce store"></li>
+    <li data-es="Carrito, inventario y productos" data-en="Cart, inventory & products"></li>
+    <li data-es="Base preparada para escalar" data-en="Scalable sales-ready foundation"></li>
+    <li data-es="Marca digital de alto nivel" data-en="High-end digital brand"></li>
+  </ul>
+  <a href="https://wa.me/15027942412?text=Hola,%20quiero%20el%20Plan%20Z%20Premium">Contactar</a>
 </div>
 
 </section>
 
 <footer>© 2025 ZenSite · Todos los derechos reservados</footer>
+
 </main>
 
 <script>
@@ -335,8 +288,8 @@ function setLang(lang){
     el.textContent = el.dataset[lang];
   });
 }
-esBtn.onclick=()=>{esBtn.classList.add("active");enBtn.classList.remove("active");setLang("es");}
-enBtn.onclick=()=>{enBtn.classList.add("active");esBtn.classList.remove("active");setLang("en");}
+esBtn.onclick=()=>{esBtn.classList.add("active");enBtn.classList.remove("active");setLang("es");};
+enBtn.onclick=()=>{enBtn.classList.add("active");esBtn.classList.remove("active");setLang("en");};
 </script>
 
 </body>
